# preconfirmation-reneging-poc

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  log.txt  package-lock.json  package.json  tx.ts
contracts/: CommitmentVerification.sol
methods/: Cargo.toml  profile.pb
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs  main.rs
script/: Deploy.s.sol
tests/: CommitmentVerification.t.sol  LibBytes.sol  Sha2Ext.sol
