[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dependencies]
anyhow = { workspace = true }
alloy-primitives = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }

sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

risc0-zkvm = { workspace = true, features = ["client"] }
risc0-ethereum-contracts = { workspace = true }

bytemuck = "1.16.0"

#risc0-groth16 = "0.21.0"
tracing = "0.1"
tracing-subscriber = "0.3"

ethers = { version = "2.0" }
hex = { version = "0.4" }

ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
ark-ff = "0.4.0"