[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }

k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"

sha3 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

risc0-zkvm = { workspace = true, features = ["client"] }
risc0-ethereum-contracts = { workspace = true }

bytemuck = "1.16.0"

tracing = "0.1"
tracing-subscriber = "0.3"

ethers = { version = "2.0" }
hex = { version = "0.4" }
hex-literal = "0.4.1"

