[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]

[dependencies]
risc0-zkvm = {  version = "0.21", default-features = false, features = ['std'] }
ark-ec = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
# ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"

hex-literal = "0.4"

sha2 = "0.10.6"

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.2-risc0"

[patch.crates-io.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risc0"

[profile.release]
# Empirically observed to result in the best performance for this binary (in particular, better than
# "fat"). It's often a good idea to experiment with different optimization levels and options.
codegen-units = 1
lto = "thin"